configuração system.properties - procfile - porta para subir para o heroku

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port=9000
+
 spring.datasource.url = jdbc:h2:file:~/db/novobancoteste
 spring.datasource.username=sa
 spring.datasource.password=
@@ -7,4 +7,6 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled=true
 
+
+server.port=${PORT:5000}
 
